@@ -4,7 +4,10 @@ import com.eduvod.eduvod.dto.request.schooladmin.SubjectRequest;
 import com.eduvod.eduvod.dto.response.common.BaseApiResponse;
 import com.eduvod.eduvod.dto.response.schooladmin.SubjectResponse;
 import com.eduvod.eduvod.model.schooladmin.Subject;
+import com.eduvod.eduvod.model.superadmin.School;
+import com.eduvod.eduvod.model.superadmin.SchoolAdmin;
 import com.eduvod.eduvod.repository.schooladmin.SubjectRepository;
+import com.eduvod.eduvod.security.util.AuthUtil;
 import com.eduvod.eduvod.service.schooladmin.SubjectService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -17,13 +20,23 @@ import java.util.stream.Collectors;
 public class SubjectServiceImpl implements SubjectService {
 
     private final SubjectRepository subjectRepository;
+    private final AuthUtil authUtil;
 
     @Override
     public BaseApiResponse<SubjectResponse> createSubject(SubjectRequest request) {
+        SchoolAdmin schoolAdmin = authUtil.getCurrentSchoolAdmin();
+        School school = schoolAdmin.getSchool();
+
+        if (subjectRepository.findByNameAndSchool(request.getName(), school).isPresent()) {
+            throw new RuntimeException("Subject with name '" + request.getName() + "' already exists in this school.");
+        }
+
+
         Subject subject = Subject.builder()
                 .name(request.getName())
                 .compulsory(request.isCompulsory())
                 .deleted(false)
+                .school(school)
                 .build();
 
         subjectRepository.save(subject);
@@ -36,6 +49,14 @@ public class SubjectServiceImpl implements SubjectService {
         Subject subject = subjectRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Subject not found"));
 
+        School school = authUtil.getCurrentSchoolAdmin().getSchool();
+
+        subjectRepository.findByNameAndSchool(request.getName(), school)
+                .filter(existing -> !existing.getId().equals(subject.getId()))
+                .ifPresent(existing -> {
+                    throw new RuntimeException("Another subject with name '" + request.getName() + "' already exists in this school.");
+                });
+
         subject.setName(request.getName());
         subject.setCompulsory(request.isCompulsory());
 
@@ -43,6 +64,7 @@ public class SubjectServiceImpl implements SubjectService {
 
         return BaseApiResponse.success(mapToResponse(subject));
     }
+
 
     @Override
     public BaseApiResponse<Void> deleteSubject(Long id) {
@@ -56,15 +78,22 @@ public class SubjectServiceImpl implements SubjectService {
     }
 
     @Override
-    public BaseApiResponse<List<SubjectResponse>> getAllSubjects() {
-        List<Subject> subjects = subjectRepository.findByDeletedFalse();
+    public BaseApiResponse<List<SubjectResponse>> getAllSubjectsForSchool() {
+        SchoolAdmin schoolAdmin = authUtil.getCurrentSchoolAdmin();
+        School school = schoolAdmin.getSchool();
 
+        if (school == null) {
+            return BaseApiResponse.success(List.of());
+        }
+
+        List<Subject> subjects = subjectRepository.findBySchool(school);
         List<SubjectResponse> responseList = subjects.stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
 
         return BaseApiResponse.success(responseList);
     }
+
 
     private SubjectResponse mapToResponse(Subject subject) {
         return SubjectResponse.builder()
